# bq2ch

./: README.md  pyproject.toml
docs/: bigquery-cdc.md  bigquery-continuous-queries.md  bigquery-export-data.md  bigquery-scheduled-queries.md  clickhouse-s3cluster.md  clickhouse-s3queue.md  gcs-s3-interop.md  schema-mapping.md
src/bq_ch_migrator/: bq_export.py  bq_ingest.py  bq_scheduled.py  ch_export.py  ch_ingest.py  cli.py  config.py  schema.py  watermark.py
src/bq_ch_migrator/cloud_function_template/: main.py  requirements.txt
